gradle build fixed (removed run with arguments), added stuff into javaFx - various components