@@ -1,5 +1,5 @@
 # LbdFx01
-First learning project for JavaFX education purposes (Lbd stands for "learning by doing")
+First learning project for JavaFX education purposes (Lbd stands for "Learning by Doing")
 
 ## Technology / Versions
 - Workspaces
@@ -9,13 +9,17 @@ First learning project for JavaFX education purposes (Lbd stands for "learning b
 - OpenJDK 11 SDK
 - Gradle -v 6.9.1
   `gradle wrapper --gradle-version 6.9.1`
-- JavaFX
+- JavaFX 17.0.1
 
 ## JavaFX init
 openjfx-17.0.1_linux-x64_bin-sdk
-in Idea > Project Structure > Libraries > Add > javafx-sdk-17.0.1/src.zip
-right click on javafx library > add to modules > select all and add
-Project Structure > Modules > Select all > Check Dependencies tab if javafx is checked
+- In Idea > Project Structure > Libraries > Add > javafx-sdk-17.0.1/src.zip
+- Right click on JavaFX library > add to modules > select all and add
+- Project Structure > Modules > Select all > Check Dependencies tab if JavaFX is checked
+
+### JavaFX errors:
+java.lang.RuntimeException: Unable to parse --add-exports <module>=<value>: javafx.controls
+- Check settings project above
 
 ## Learning Sources
 `https://www.tutorialspoint.com/javafx/index.htm`
